--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ phases:
   pre_build:
     commands:
       — echo Amazon ECR…
-      — aws — version
+      — aws -version
       — $(aws ecr get-login — region $AWS_DEFAULT_REGION — no-include-email)
       — REPOSITORY_URI="public.ecr.aws/w0u2p9o6/node-js-cloudbuild-basic"
       — COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1–7)
