--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,17 +2,16 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      — echo Amazon ECR…
-      — aws -version
-      — $(aws ecr get-login —region $AWS_DEFAULT_REGION —no-include-email)
+      - echo Logging in to Amazon ECR...
+      - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
       — REPOSITORY_URI="public.ecr.aws/w0u2p9o6/node-js-cloudbuild-basic"
-      — COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1–7)
-      — IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}'')
+      - CODEBUILD_RESOLVED_SOURCE_VERSION="${CODEBUILD_RESOLVED_SOURCE_VERSION:-$IMAGE_TAG}"
+      - IMAGE_TAG=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
   build:
     commands:
-      — echo Build started on `date`
-      — echo Building the Docker image…
-      — docker build -t $REPOSITORY_URI:latest .
+      - echo Build started on `date`
+      - echo Building the Docker image...
+      - docker build -t $REPOSITORY_URI:latest .
       — docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
