--- a/deployment.yaml
+++ b/deployment.yaml
@@ -8,10 +8,10 @@ spec:
   ports:
   - name: http
     port: 80
-    targetPort: 8080
+    targetPort: 80
   - name: https
     port: 8080
-    targetPort: 8080
+    targetPort: 80
   selector:
     app: test-image
     tier: frontend
@@ -42,6 +42,6 @@ spec:
         - containerPort: 8080
           name: http
         - containerPort: 80
-          name: http
+          name: httpa
         - containerPort: 443
           name: https
